# Ellipsoidal_X-ray_Experiment

./: LICENSE  README.md
3Dmodels/optics_curved/: optics_curved.FCStd  roentgen_optics.20250524-133446.FCBak
backup/: clean_csv.py
backup/curved/: GammaMomentumSD.cc  GammaMomentumSD.hh  GammaTrackingAction.hh  action.cc  construction.cc  construction.hh  generator.cc
backup/flat/: GammaTrackingAction.cc  construction.cc
backup/old_gdml_files/: target_old1.gdml  target_old2.gdml
data/data_raw/100 keV/curved/: gamma_momenta.csv
data/data_raw/150 keV/curved/: gamma_momenta.csv
data/data_raw/200 keV/curved/: gamma_momenta.csv
data/data_raw/200 keV/flat/: gamma_momenta.csv
data/data_raw/300 keV/curved/: gamma_momenta.csv
data/data_raw/400 keV/curved/: gamma_momenta.csv
data/data_raw/400 keV/flat/: gamma_momenta.csv
data/data_raw/500 keV/curved/: gamma_momenta.csv
data/data_raw/500 keV/flat/: gamma_momenta.csv
data/graphs/: results.numbers  results.xlsx  target_performance.xlsx
python_visualization/: plot_csv.py  scatter_plot.py  statistics.py
simulation/curved_target/: CMakeLists.txt  CurvedTarget.cc  GammaTrackingAction.cc  generator.cc  generator.hh  physics.hh
simulation/flat_target/: CMakeLists.txt  GammaTrackingAction.cc  action.hh  construction.cc  generator.cc
